# RaylibEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/cubemap/: CMakeLists.txt
apps/cubemap/src/: CubemapUtils.h  main.cpp
apps/editor/: CMakeLists.txt
apps/editor/src/: main.cpp
apps/shader-graph/: CMakeLists.txt
apps/shader-graph/src/: CodeGeneration.h  Context.h  NodePropertiesSubView.cpp  NodePropertiesSubView.h  PreviewSubView.cpp  PreviewSubView.h  ShaderCompilationSubView.cpp  ShaderCompilationSubView.h  main.cpp
apps/shader-graph/src/nodes/: Node.cpp  Node.h  NodeIO.h  NodeInput.cpp  NodeInput.h  NodeOutput.cpp
apps/ui/: CMakeLists.txt
apps/ui/src/: difficultyPage.h  main.cpp  mainPage.h  ui.h
assets/graphs/: invert.graph.json  posterize.graph.json  test.graph.json
assets/lua/: config.lua  test.lua
assets/materials/: car.mat.json  church.mat.json  furina.mat.json  furina_body.mat.json  furina_face.mat.json  furina_hair.mat.json  gold.mat.json  jello.mat.json  metal.mat.json  pbr.mat.json  plane.mat.json  rock.mat.json  scifi.mat.json  skin.mat.json  skybox.mat.json  test.mat.json
assets/models/: duck_floaty.glb  eremite.glb  furina.mtl  navia2.mtl
assets/scenes/: jello.scene.json  lighting.scene.json  test.scene.json
assets/shaders/: custom.vert  lighting.frag  pbr.frag  shader.glsl  shader.hlsl  skybox.frag
internal-assets/nodes/: abs.json  add.json  addv2.json  addv3.json  atan.json  clamp.json  cos.json  cross.json  divide.json  dividev2.json  dividev3.json  dot.json  flipY.json  float.json  floor.json  fract.json  length.json  lerp.json  lerpv2.json  lerpv3.json  mod.json  multiply.json  multiplyv2.json  multiplyv3.json  normalize.json  pi.json  pow.json  remap.json  sampleMainTex.json  sin.json  smoothstep.json  smoothstepv2.json  smoothstepv3.json  split.json  subtract.json  subtractv2.json  subtractv3.json  tan.json  uv.json  vec2.json  (+1 more)
internal-assets/shaders/: bg.frag  convert.glsl  convert.hlsl  cubemap.frag  default.frag  error.frag  highlight.frag  irradiance.frag  normal.frag  prefilter.frag  skybox.frag  uv.frag
internal-assets/textures/: brdfLUT.dds
lua/: config.lua  test.lua
modules/core/: CMakeLists.txt
modules/core/src/GCM/Components/: CameraComponent.cpp  DebugGridBoxComponent.h  JelloComponent.h  LightComponent.h  ModelComponent.h  RigidbodyComponent.h
modules/core/src/editor/: ComponentHeaderProperty.cpp  Editor.h  LuaProperty.h  raygui_impl.cpp
modules/core/src/input/: MouseDragState.cpp
modules/core/src/logger/: Logger.cpp
modules/core/src/utils/: PhysicsUtils.h  Plane.h  ShaderParam.h  Utils.h
src/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  main.cpp
src/GCM/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
src/GCM/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  DebugGridBoxComponent.cpp  DebugGridBoxComponent.h  DebugGridComponent.cpp  DebugGridComponent.h  JelloComponent.cpp  JelloComponent.h  LightComponent.cpp  LightComponent.h  ModelComponent.cpp  ModelComponent.h  ProceduralMeshComponent.cpp  ProceduralMeshComponent.h  RigidbodyComponent.cpp  ScriptComponent.cpp  ScriptComponent.h  TransformComponent.cpp  TransformComponent.h
src/common/GCM/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
src/common/GCM/Components/: CameraComponent.cpp  CameraComponent.h  Component.h  DebugGridComponent.h  ModelComponent.cpp  ModelComponent.h  ProceduralMeshComponent.cpp  ProceduralMeshComponent.h  SphereColliderComponent.cpp  SphereColliderComponent.h
src/common/context/: RuntimeContext.h
src/common/editor/: AddComponentProperty.h  AnimationProperty.cpp  ColorProperty.cpp  DropdownProperty.cpp  DropdownProperty.h  Editor.h  GameObjectHierarchyProperty.h  LuaProperty.cpp  MaterialProperty.cpp  MaterialProperty.h
src/common/input/: MouseDragState.cpp  MouseDragState.h
src/common/luautils/: LuaManager.cpp
src/common/subviews/: AssetsSubView.h  ConsoleSubView.cpp  ISubviewRenderer.h  RenderTextureRenderer.cpp
src/common/utils/: MathUtils.h  RaylibUtils.h  Sphere.h  Utils.h
src/context/: EditorContext.h  RuntimeContext.h
src/cubemap/: CubemapUtils.h  main.cpp
src/editor/: AddComponentProperty.cpp  AnimationProperty.cpp  AnimationProperty.h  ColorProperty.cpp  ColorProperty.h  ComponentHeaderProperty.cpp  ComponentHeaderProperty.h  DropdownProperty.cpp  DropdownProperty.h  Editor.h  FileHierarchyProperty.cpp  FileHierarchyProperty.h  FoldoutProperty.cpp  FoldoutProperty.h  GameObjectHierarchyProperty.cpp  LuaProperty.cpp  LuaProperty.h  MaterialProperty.cpp  MaterialProperty.h  SingleValueProperty.h  Vector3Property.cpp  Vector3Property.h  VectorProperty.h
src/input/: MouseDragState.cpp  MouseDragState.h
src/logger/: Logger.cpp  Logger.h
src/luautils/: LuaManager.h  LuaUtils.cpp  LuaUtils.h
src/raylib-utils/: RaylibUtils.h
src/shader-graph/: CodeGeneration.h  Context.cpp  Context.h  NodePropertiesSubView.cpp  NodePropertiesSubView.h  PreviewSubView.cpp  PreviewSubView.h  ShaderCompilationSubView.cpp  ShaderCompilationSubView.h  ShaderTypes.h  main.cpp
src/shader-graph/nodes/: Node.cpp  Node.h  NodeGroup.cpp  NodeGroup.h  NodeIO.h  NodeInput.cpp  NodeInput.h  NodeOutput.cpp  NodeOutput.h
src/subviews/: AssetSubView.cpp  AssetsSubView.h  ConsoleSubView.cpp  ConsoleSubView.h  GameSubView.cpp  GameSubView.h  HierarchySubView.cpp  HierarchySubView.h  ISubviewRenderer.h  InspectorSubView.cpp  InspectorSubView.h  RenderTextureRenderer.h  ScrollPanelRenderer.cpp  ScrollPanelRenderer.h  SubView.cpp  SubView.h
src/utils/: JsonUtils.h  PhysicsUtils.h  RaylibUtils.h  Utils.h
